# challenge-python-v1

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
dinopedia/: pytest.ini
dinopedia/dinopedia/: settings.py  urls.py
dinopedia/dinopedia/templates/: swagger-ui.html
dinopedia/dinosaurs/: admin.py  models.py  serializers.py  urls.py  views.py
dinopedia/tests/: test_models_dinosaurs.py  test_models_users.py  test_users.py
dinopedia/users/: managers.py  models.py  serializers.py  urls.py  views.py
